# TradingJournal

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_IMPROVEMENTS.md  BACKFILL_CLEANUP_SUMMARY.md  BACKFILL_FIX_SUMMARY.md  BACKFILL_SERVICE_DELIVERABLES.md  BACKFILL_UI_INTEGRATION_SUMMARY.md  CRUD_IMPLEMENTATION_SUMMARY.md  MULTI_SELECTION_IMPLEMENTATION_SUMMARY.md  README.md  STARTUP_OPTIMIZATION_RESULTS.md  STARTUP_PERFORMANCE_ANALYSIS.md  THREADING_FIX_SUMMARY.md  alembic.ini  app.py  git_commit.ps1  git_push.ps1  journal.sqlite3  pyproject.toml  run_journal.bat  run_journal.ps1  trading_journal.db  userprefs.json
DownloadDocs/: ROADMAP.md  SESSION_LOG_2025-09-13_TradingJournal.md  Trading Journal - Trades.csv  float_2025-09-12.csv  trade_data (2).csv  trade_data_jason.csv
alembic/: env.py
alembic/versions/: 4003c62dbf9c_rename_shares_float_to_float.py  44baa90b4d93_remove_ohlcv_from_trades.py  4636d7465c00_add_profiles_table.py  7b0e01eb48a1_add_performance_indexes.py  add_performance_indexes.py  f67064f3f30c_create_core_tables.py
examples/: architecture_demo.py  crud_demo.py
journal_backfill/: README.md  __init__.py  backfill_async.py  compute.py  config.py  db.py  demo.py  models.py  polygon_client.py  time_windows.py
src/journal/: config.py  container.py  dto.py
src/journal/db/: dao.py  models.py
src/journal/ingest/: mapping.tradersync.json  tradersync.py
src/journal/repositories/: base.py  price.py  profile.py  symbol.py  trade.py
src/journal/services/: analytics.py  backfill.py  backfill_service.py  cache.py  csv_import.py  floatmap.py  fundamentals.py  import_service.py  market.py  profile_service.py  session_manager.py  session_persistence.py
src/journal/ui/: analytics_panel.py  backfill_dialog.py  columns_dialog.py  editable_trades_model.py  main_window.py  prefs.py  profile_dialog.py  profile_selector.py  repository.py  trades_model.py
tests/: test_bench_insert.py  test_dao_constraints.py  test_ingest_idempotent.py  test_ingest_validation.py  test_migration.py  test_smoke.py
tests/data/: float.csv  float_real.csv  tradersync_bad.csv  tradersync_good.csv
tests/services/: test_derived_analytics.py  test_float_loader.py  test_fundamentals.py  test_grouping.py  test_market_retry.py  test_prev_close.py  test_symbol_normalization.py
