[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-journal"
version = "0.1.0"
description = "TraderSync-style trading journal (Windows GUI)"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.3,<3",
  "SQLAlchemy>=2.0.30,<3",
  "alembic>=1.13.2,<2",
  "polars>=1.6.0,<2",
  "httpx[http2]>=0.27,<1",
  "python-dotenv>=1.0,<2",
  "PySide6>=6.7,<7",
  "rich>=13.7,<14",
  "tqdm>=4.66,<5",
  "dependency-injector>=4.48,<5",
  "tenacity>=9.1,<10",
  "structlog>=25.4,<26",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "mypy>=1.11,<2",
  "ruff>=0.6,<1",
  "black>=24.8,<25",
  "pre-commit>=3.8,<4",
  "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","ANN"]
ignore = ["ANN101","ANN102","ANN401"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
